<resources>
    <string name="app_name">SocialQ</string>
    <string name="service_name">SocialQ</string>
    <string name="play_queue_service_description">Service that uses SpotifyPlayer to play music and support the SocialQ application.</string>
    <string name="host_service_description">Service used to host a SocialQ</string>
    <string name="client_service_description">Service used as a client of a SocialQ</string>
    <string name="access_service_description">Service used to keep SocialQ access token up to date</string>

    <!-- Required by Spotify Auth -->
    <string name="com_spotify_sdk_redirect_scheme">https</string>
    <string name="com_spotify_sdk_redirect_host">fryguy1991.github.io</string>

    <!-- Gate Screen -->
    <string name="sign_in_with">Sign In With</string>
    <string name="spotify_button_content_description">Sign in with Spotify</string>
    
    <!-- Notification Strings -->
    <string name="host_notification_content_text">Hosting \"%1$s\"</string>
    <string name="client_notification_content_text">Connected to \"%1$s\"</string>
    <string name="client_notification_title_pre_n">SocialQ - Connected to \"%1$s\"</string>
    <string name="client_notification_title_n_plus">Connected to \"%1$s\"</string>

    <!-- Menu Action Strings -->
    <string name="search_action">search_action</string>

    <!-- Common Dialog Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="open_settings">Open Settings</string>

    <!-- Host Screen Strings -->
    <string name="next_btn">Next</string>
    <string name="play_btn">Play</string>
    <string name="pause_btn">Pause</string>
    <string name="toast_authentication_error_host">Authentication Error</string>
    <string name="added_by_client_formatter">Added By: %1$s</string>
    <string name="select_base_playlist">Select A Base Playlist</string>
    <string name="fresh_playlist">Start A New Playlist</string>
    <string name="base_playlist">Base Playlist</string>
    <string name="client_joined">A Client Has Joined</string>
    <string name="client_disconnected">A Client Has Disconnected</string>
    <string name="number_of_tracks">%1$s Tracks</string>
    <string name="empty_queue_message">Queue is empty! Add tracks by pressing \'+\'</string>

    <!-- Close Host Dialog Strings -->
    <string name="close_host_dialog_title">Close Queue?</string>
    <string name="close_host_dialog_description">Closing the queue will halt music playback and disconnect any clients.</string>
    <string name="save_playlist">Save Spotify Playlist</string>
    <string name="playlist_name_hint">Playlist Name</string>
    <string name="close_host_dialog_close_button">Close Queue</string>
    <string name="close_host_dialog_close_and_save_button">Close And Save Playlist</string>

    <!-- Client Screen Strings -->
    <string name="toast_authentication_error_client">Authentication Error</string>
    <string name="toast_host_disconnected">Queue Closed</string>
    <string name="toast_host_connection_error">Connection Error</string>
    <string name="toast_failed_to_connect_to_host">Failed To Connect To Host</string>

    <!-- Close Client Dialog Strings -->
    <string name="close_client_dialog_title">Exit Queue?</string>
    <string name="follow_playlist">Follow Spotify Playlist</string>
    <string name="close_client_host_disconnect_dialog_title">Queue Closed</string>
    <string name="follow_playlist_question">Would you like to follow the playlist on Spotify?</string>

    <!-- Search Screen Strings -->
    <string name="search_hint">Search for songs, artists or albums.</string>
    <string name="search_activity_name">Search</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="number_of_albums">%1$d Albums</string>
    <string name="number_of_artists">%1$d Artists</string>
    <string name="number_of_songs">%1$d Songs</string>
    <string name="artist_top_tracks">%1$s Top Tracks</string>
    <string name="invalid_access_token">Invalid Access Token</string>
    <string name="no_results_found">No Results Found For \'%1$s\'</string>
    <string name="see_all_songs">See All Songs</string>
    <string name="see_all_artists">See All Artists</string>
    <string name="see_all_albums">See All Albums</string>
    <string name="album_track_with_position_number">%1$s. %2$s</string>
    <string name="artist_albums">%1$s Albums</string>

    <!-- Launch Screen Strings -->
    <string name="start_queue">Start Queue</string>
    <string name="join_queue">Join Queue</string>
    <string name="available_queues">Available Queues</string>
    <string name="new_queue">New Queue</string>
    <string name="no_host_found_message">No available queues were found. Pull down to retry, or start your own!</string>
    <string name="host_search_failed_message">Queue search failed. Pull down to retry, or start your own!</string>
    <string name="queue_searching_message">Searching for available queues.</string>
    <string name="location_permission_required_title">Location Permission Denied</string>
    <string name="location_permission_required_message">Location permission is required to host, join, and add songs to queues.</string>
    <string name="unknown_queue">Unknown Queue</string>
    <string name="unknown_host">Unknown Host</string>

    <!-- Join Queue Fragment -->
    <string name="queue_details">Queue Details</string>
    <string name="queue_owner">Owner</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="unknown">Unknown</string>

    <!-- Queue Options Strings -->
    <string name="queue_options">Queue Options</string>
    <string name="queue_title">Queue Name</string>
    <string name="queue_title_default_value">SocialQ Host</string>
    <string name="fair_play">Fair Play</string>
    <string name="enable_fair_play">Enable Fair Play</string>
    <string name="fair_play_description">Fair play will automatically sort new songs based on who adds them. This ensures that users who add many songs in a row won\'t dominate the queue.</string>
    <string name="use_base_playlist">Use Base Playlist</string>
    <string name="base_playlist_description">Selecting a base playlist will load an existing Spotify playlist into the new queue.</string>
    <string name="default_playlist_name">SocialQ Playlist</string>
    <string name="none">None</string>
    <string name="base_playlist_info_content_description">Base playlist info</string>
    <string name="fair_play_info_content_description">Fair play info</string>


    <!-- Queue Connect Screen Strings -->
    <string name="join">Join</string>

    <!-- Premium Required Dialog Strings -->
    <string name="premium_required_title">Spotify Premium Required</string>
    <string name="premium_required_message">Spotify premium is required in order to host a SocialQ.</string>

    <!-- Authentication Failed Dialog Strings -->
    <string name="auth_fail_title">Spotify Sign In Failed</string>
    <string name="auth_fail_message">Spotify sign in failed. Would you like to retry?</string>
    <string name="retry">Retry</string>
    <string name="close_app">Close App</string>

    <!-- Network String -->
    <string name="default_playlist_description">A playlist created by the SocialQ app</string>
</resources>
