<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/close_host_dialog_title"
        style="@style/DialogTitleText"/>

    <CheckBox
        android:id="@+id/cb_save_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_half"
        android:layout_marginStart="@dimen/dialog_side_margin"
        android:layout_marginEnd="@dimen/dialog_side_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save_playlist"/>

    <EditText
        android:id="@+id/et_save_playlist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_half"
        android:layout_marginStart="@dimen/dialog_side_margin"
        android:layout_marginEnd="@dimen/dialog_side_margin"
        app:layout_constraintTop_toBottomOf="@id/cb_save_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:hint="@string/playlist_name_hint"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>