<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gate_gradient">

    <TextView
        android:id="@+id/socialQTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp"
        android:textColor="@color/Ice_White"
        android:text="@string/app_name"
        android:textSize="80sp"/>

    <ImageView
        android:id="@+id/gateImage"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/socialQTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_socialq_badge"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:transitionName="badgeImage"/>

    <TextView
        android:id="@+id/spotifyButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spotifyButton"
        android:layout_marginBottom="16dp"
        android:textColor="@color/Ice_White"
        android:text="@string/sign_in_with"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/spotifyButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:padding="16dp"
        android:layout_margin="32dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_spotify_logo_green"
        android:background="@drawable/spotify_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/spotify_button_content_description"/>
</androidx.constraintlayout.widget.ConstraintLayout>