<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_launch_graph"
    app:startDestination="@id/launchFragment"
    xmlns:tools="http://schemas.android.com/tools">
    <fragment
        android:id="@+id/launchFragment"
        android:name="com.chrisf.socialq.userinterface.fragments.LaunchFragment"
        android:label="@string/available_queues"
        tools:layout="@layout/fragment_launch">
        <action
            android:id="@+id/action_launchFragment_to_newQueueFragment"
            app:destination="@id/newQueueFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_launchFragment_to_clientActivity"
            app:destination="@id/clientActivity"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/newQueueFragment"
        android:name="com.chrisf.socialq.userinterface.fragments.NewQueueFragment"
        android:label="@string/new_queue"
        tools:layout="@layout/fragment_new_queue" >
        <action
            android:id="@+id/action_newQueueFragment_to_hostActivity"
            app:destination="@id/hostActivity"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/launchFragment" />
    </fragment>
    <activity
        android:id="@+id/hostActivity"
        android:name="com.chrisf.socialq.userinterface.activities.HostActivity"
        android:label="HostActivity"
        tools:layout="@layout/activity_host_screen">
        <argument
            android:name="queueTitle"
            app:argType="string"
            android:defaultValue="@string/queue_title_default_value"/>
        <argument
            android:name="isFairPlay"
            app:argType="boolean"/>
        <argument
            android:name="basePlaylistId"
            app:argType="string"/>
    </activity>
    <activity
        android:id="@+id/clientActivity"
        android:name="com.chrisf.socialq.userinterface.activities.ClientActivity"
        android:label="ClientActivity"
        tools:layout="@layout/activity_client_screen">
        <argument
            android:name="queueTitle"
            app:argType="string" />
        <argument
            android:name="hostEndpointId"
            app:argType="string" />
    </activity>
</navigation>